<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ListView
        android:id="@id/android:list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/profile_text_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/profile_label_text_name"
        android:inputType="text" />
    <EditText
        android:id="@+id/profile_text_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/profile_label_password"
        android:inputType="textPassword" />

    <AutoCompleteTextView
        android:id="@+id/profile_autocomplete_institution"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/profile_label_text_college"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/profile_text_gre"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/profile_label_text_gre"
        android:inputType="text" />

    <EditText
        android:id="@+id/profile_text_toefl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/profile_label_text_toefl"
        android:inputType="text" />

    <EditText
        android:id="@+id/profile_text_ug_score"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/profile_label_ug_score"
        android:inputType="text" />

    <EditText
        android:id="@+id/profile_text_work_experience"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/profile_label_work_experience"
        android:inputType="text" />
    
    <Button
        android:id="@+id/profile_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="selfDestruct"
        android:text="@string/profile_submit_string" />

</LinearLayout>